- fixed transaction confirmation status issue - fixed light theme scrollbar always shown issue

--- a/Spixi/Resources/Raw/html/css/spixiui-light.css
+++ b/Spixi/Resources/Raw/html/css/spixiui-light.css
@@ -1810,7 +1810,7 @@ img.emoji {
 }
 
 .scrollable-div {
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .scrollable-div::-webkit-scrollbar {
